# goose

./: .cursorrules  .gitignore  .goosehints  .ruff.toml  404.html  CONTRIBUTING.md  Cargo.toml  Justfile  download_cli.sh  download_tokenizer_files.py  download_tokenizers.sh  index.html  sitemap.xml
.github/workflows/: canary.yml  ci-desktop.yml  ci.yaml  desktop-app-release.yaml  nightly.yml  pr-comment-bundle-desktop.yml  release.yml
assets/css/: styles.140fde1d.css  styles.a06dacd4.css  styles.b5b33de0.css
assets/js/: 00bbba72.4df1379c.js  07691c2f.55dfd0e1.js  07691c2f.937cb04f.js  07691c2f.a3980b9b.js  0a45c249.044e3c52.js  0a45c249.115da296.js  0a45c249.190ce4c3.js  0a45c249.2449f44b.js  0a45c249.2ebfe1c1.js  0a45c249.4c0a0198.js  0a45c249.4c61a924.js  0a45c249.66b23cfd.js  0a45c249.84e6d409.js  0a45c249.8e9d6507.js  0a45c249.95ecddfc.js  0a45c249.a05b688c.js  0a45c249.a30f1f2c.js  0a45c249.a507508b.js  0a45c249.b3155153.js  0a45c249.e68baa00.js  0a45c249.ea494de8.js  0d00e5a5.0e4b5eb5.js  0ef0a83e.191730cc.js  (+364 more)
blog/: atom.xml  index.html  rss.xml
community/: index.html
crates/goose-mcpclient/: Cargo.toml  README.md
crates/goose-mcpclient/src/: jsonrpc.rs  main.rs  session.rs  sse.rs  stdio_client.rs  types.rs
deeplink-generator/: index.html
docs/: run_cross_local.md
documentation/: docusaurus.config.ts  package-lock.json
extension/: index.html
extensions/: index.html
grants/: index.html
markdown-page/: index.html
prompt-library/: index.html
recipe-generator/: index.html
recipes/: index.html
scripts/: setup_langfuse.sh
(+526 files in other folders)
